2012-06-22 Baptiste Lepilleur <blep@users.sourceforge.net>
	* include/cppunit/portability/FloatingPoint.h:
	* configure.in:
	* INSTALL-unix: Fixed build on Solaris/Sun Studio (configure issues). 
	  Applied patch from bug #3483400 & #3483396. Updated build instructions.
	  Added missing include <ieeefp.h> required to use finite() on 
	  Solaris/Sun Studio. Added -lm to link for fabs().

2009-11-24 Baptiste Lepilleur <blep@users.sourceforge.net>
	* src/cppunit/TestResult.cpp: flush stdout & stderr in destructor
	  to avoid message loss in case of crash (bug #2832029).

	* include/cppunit/plugin/TestPlugIn.h: 
	* include/cppunit/plugin/TestPlugInDefaultImpl.h: added missing dllexport
	  for CppUnitTestPlugIn.

	* include/cppunit/portability/config-msvc6.h:
	* include/cppunit/portability/Portability.h: Added macro 
	  CPPUNIT_UNIQUE_COUNTER on MSVS 7.0+ using __COUNTER__ to
	  fix bug #2031696.
	  
	* examples/examples2008.sln: Fixed compilation issue in debug
	  configuration with VS2008 (due to incorrect configuration
	  being picked up).
	  
	* src/msvc6/testpluginrunner/TestPlugInRunnerDlg.cpp: fixed
	  memory leak in getCommandLineArguments() (bug #1721408).

	* config/ax_cxx_gcc_abi_demangle.m4:
	* src/cppunit/TypeInfoHelper.cpp: Fixed demangling of symbols on gcc 4.3
	  (bug #2796543).

2009-11-23 Baptiste Lepilleur <blep@users.sourceforge.net>

    * src/DllPlugInTester/Makefile.am:
    * examples/cppunittest/Makefile.am:
    * examples/money/Makefile.am:
    * examples/simple/Makefile.am:
    * examples/hierarchy/Makefile.am: Applied patch #2807259
      contributed by Jan Echternach. LIBADD_DL contains a list of libraries
      like "-ldl". Thus, it should be in LDADD instead of LDFLAGS in case
      one of the libraries depends on a path set in LDFLAGS.

2008-12-16 Andy Dent
	* src/msvc6/testrunner/MsDevCallerListCtrl.cpp: 
	* INSTALL-VS.Net2008.txt: Added updated project and instructions for 