@@ -4,6 +4,11 @@
 #include <cppunit/Test.h>
 #include <string>
 
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( push )
+#pragma warning( disable: 4251 )  // X needs to have dll-interface to be used by clients of class Z
+#endif 
+
 CPPUNIT_NS_BEGIN
 
 
@@ -41,5 +46,9 @@ private:
 
 
 CPPUNIT_NS_END
+
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( pop )
+#endif
 
 #endif // CPPUNIT_TESTCOMPSITE_H
