@@ -6,9 +6,11 @@
 #if !defined(AFX_STDAFX_H__D15A539F_17E8_11D2_A49B_00805FC1C042__INCLUDED_)
 #define AFX_STDAFX_H__D15A539F_17E8_11D2_A49B_00805FC1C042__INCLUDED_
 
-#if _MSC_VER >= 1000
 #pragma once
-#endif // _MSC_VER >= 1000
+
+#define _WIN32_WINNT  _WIN32_WINNT_WINXP  // Support Windows XP and later
+#define _WIN32_IE     _WIN32_IE_IE70      // Support IE 7.0 and later
+#include <SDKDDKVer.h>
 
 #pragma warning( disable : 4786 )  // warning of hell: debug symbol too long...
 
